Lightbox: 1) Moved title to Top Margin of Lightbox window. 2) Fixed problem when title is longer than image width ..    Title now wraps to Lightbox window image width, when opened, in slideshow mode, or zooming. 3) Added "Details" Link to Bottom Margin (Invokes Mediaviewer page). 4) Fixed scroll erroneously locking up with IE on medialist page. 5) Fixed Lightbox erroneous displacement when page scrolled and drag and dropping in IE. 7) All Lightbox window bottom margin icon tooltips are now PGV lang enabled. 8) Corrected tooltip erroneously covering thumbnail when in RTL mode.
git-svn-id: svn://svn.webtrees.net/trunk/phpGedView@2236 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/modules/lightbox/css/clearbox_music.css
+++ b/modules/lightbox/css/clearbox_music.css
@@ -108,6 +108,31 @@
 #CB_Text {
 	text-align: center;
 	color: #0000FF;
+	margin-top: 4px;	
+/*	width: 150px;
+	overflow: auto;	*/
+}
+
+#CB_Text {
+	position: relative;
+	top: -6px;
+}
+
+#CB_TopText {
+    background-color: #FFFFFF;
+	text-align: center;
+	font-weight: 500;
+	color: #8800FF;
+	padding-bottom: 4px;
+	margin-top: -6px;
+	margin-bottom: 6px;  
+}
+
+#CB_TopText a, #CB_Txt2 a {
+	color: #888888;
+}
+#CB_TopText a:hover, #CB_Txt2 a:hover  {
+	color: #AA0000;
 }
 
 #CB_Window {
@@ -222,7 +247,8 @@ background:transparent url(../pic/next.gif) no-repeat scroll right 50%;
 
 #CB_SlideShowS, #CB_SlideShowP {
 	position: absolute;
-	top: -4px;
+/*	top: -4px; */
+	top: 2px;
 	left: 2px; 
 	z-index: 1104;
 	cursor: pointer;
@@ -230,44 +256,41 @@ background:transparent url(../pic/next.gif) no-repeat scroll right 50%;
 
 #CB_MusicOn, #CB_MusicOff {
 	position: absolute;
-	top: -6px;
-	left: 22px;
+/*	top: -6px; */
+	top: 0px;
+	left: 28px;
 	z-index: 1104;
 	cursor: pointer;
 }
 
 #CB_Speak, #CB_Speaker {
 	position: absolute;
-	top: -6px;
-	left: 22px;
+/*	top: -6px; */
+	top: 0px;	
+	left: 28px;
 	z-index: 1104;
 	cursor: pointer;
 }
 
-#CB_Text {
-	position: relative;
-	top: -6px;
-}
-
 #CB_ZoomOn {
 	position: absolute;
-	top: -5px;
-	right: 20px;
+	top: -1px;
+	right: 28px;
 	z-index: 1104;
 	cursor: pointer;
 }
 
 #CB_ZoomOff {
 	position: absolute;
-	top: -5px;
-	right: 20px;
+	top: -1px;
+	right: 28px;
 	z-index: 1104;
 	cursor: pointer;
 }
 
 #CB_CloseWindow {
 	position: absolute;
-	top: -3px;
+	top: 1px;
 	right: 2px;
 	z-index: 1104;
 	cursor: pointer;
